--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
       <p class="hero-text">Передовая IT студия</p>
       <h1 class="hero-title">
         Мы создаем легкие решения сложных задач и проблем
+        <span class="badge bg-secondary">New</span>
       </h1>
-      <button type="button" class="hero-button button" data-modal-open>Наши проекты</button>
+      <button type="button" class="hero-button btn btn-primary" data-modal-open>Наши проекты</button>
     </section>
     <section class="services">
       <div class="container">
         <h2 class="services-title section-title">
-          Мы создаем мобильные приложения для крупных корпораций
+          <i class="fab fa-facebook-f"></i> Мы создаем мобильные приложения для крупных корпораций
         </h2>
         <p class="services-text text">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и
@@ -184,11 +185,81 @@
     <section class="works">
       <div class="container">
         <div class="works-head">
-          <h2 class="works-title section-title">Наши работы, на которых мы специализируемся</h2>
+          <h2 class="works-title section-title" >Наши работы, на которых мы специализируемся</h2>
           <button type="button" class="works-button button">Все услуги</button>
         </div>
 
         <ul class="works-list">
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
+          <li class="works-item">
+            <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
+            <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
+            <p class="works-txt text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="works-link typical-link" href="">Подробнее</a>
+          </li>
           <li class="works-item">
             <img src="./images/project-1.png" class="works-img" alt="рабочий процесс" width="350" />
             <h3 class="work-subtitle"><span>01.</span> Исследование и упаковка</h3>
@@ -233,12 +304,12 @@
           вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
           латинице с начала XVI века.
         </p>
-        <ul class="projects-list">
-          <li class="projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></li>
-          <li class="projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></li>
-          <li class="projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></li>
-          <li class="projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></li>
-        </ul>
+        <div class="projects-list row">
+          <div class="col-sm-6 col-lg-3 projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></div>
+          <div class="col-sm-6 col-lg-3 projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></div>
+          <div class="col-sm-6 d-none d-lg-block col-lg-3 projects-item"><img src="./images/block-33.png" alt="код на мониторе" /></div>
+          <div class="col-sm-6 col-lg-3 d-lg-flex justify-content-between align-items-center  projects-item"><div>a</div><div>b</div><div>c</div></div>
+        </div>
         <button type="button" class="projects-button button">Все проекты</button>
       </div>
 
@@ -267,6 +338,125 @@
       </div>
     
     </section>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            aria-expanded="true" aria-controls="collapseOne">
+            ewtgretgre
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds
+            the appropriate classes that we use to style each element. These classes control the overall appearance, as well
+            as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our
+            default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+            aria-expanded="false" aria-controls="collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall appearance, as
+            well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our
+            default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+            aria-expanded="false" aria-controls="collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+          data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall appearance, as
+            well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our
+            default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Launch demo modal
+    </button>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
   </main>
   <footer>
     <ul>
@@ -315,9 +505,44 @@
       <button type="button" class="close-btn" data-modal-close><svg class="close-icon" width="11" height="11">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg></button>
+      <p class="modal-title">Это заголовок нашей модалки</p>
+      <form action="">
+        <div class="modal-field">
+          <label for="input-name" class="modal-label text">Имя</label>
+          <input type="text" name="name" id="input-name" class="modal-input" placeholder="Введите имя">
+          <svg class="input-icon" width="11" height="11">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </div>
+        <div class="modal-field">
+          <label for="input-email" class="modal-label text">Имя</label>
+          <input type="text" id="input-email" name="email" class="modal-input" placeholder="Введите имя">
+          <svg class="input-icon" width="11" height="11">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </div>
+        <div class="modal-field">
+          <label for="input-tel" class="modal-label text">Имя</label>
+          <input type="text" id="input-tel" class="modal-input" name="tel" placeholder="Введите имя">
+          <svg class="input-icon" width="11" height="11">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </div>
+                <div class="modal-field">
+                  <label for="input-text" class="modal-label text">Текст</label>
+                 <textarea name="text" id="input-text" class="modal-text" placeholder="Ведите текст"></textarea>
+                </div>
+        <div class="modal-field">
+          <input type="checkbox" id="checkbox" class="input-check visually-hidden">
+          <label for="checkbox" class="check-label">Я соглашаюсь</label>
+        </div>
+        <button type="submit" class="modal-button button">Заказать</button>
+      </form>
     </div>
   </div>
+  <!-- <script src="./js/modal.js"> -->
+ 
+    </script>
 </body>
-<script src="./js/modal.js"></script>
 
 </html>
